SSCS-12009: Made versionNumber mandatory for json (#543)
* made versionNumber mandatory for json

* default versionNumber

* added hmc getHearing call to get versionNumber for hearing

* test coverage

* overridefields are overriden only when they are null

---------

Co-authored-by: Andrei Trushkov <andrei.trushkov@hmcts.net>